--- a/Page Code/css/style.css
+++ b/Page Code/css/style.css
@@ -9605,7 +9605,7 @@ body.sidebar-open::before {
 }
 
 .middle-section {
-  background-color: #f7f8fa;
+  background-color: #f4f4f4;
   overflow-x: hidden;
   position: relative;
 
